# bedepacko

./: .bede.sh.swp  .gitignore  CONTRIBUTING.md  README.md  bede.sh  install.sh  packages.json
.github/: labeler.yml
.github/workflows/: labeler.yml  lint.yml
bede-engine/: Cargo.toml
bede-engine/src/: downloader.rs  lockfile.rs  main.rs  manifest.rs  resolver.rs
collections/package/: index.md
