[package]
name = "bede-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = "0.6"
anyhow = "1"
sha2 = "0.10"
walkdir = "2"
toml = "0.8"
indicatif = "0.17"          # pretty progress bars
futures = "0.3"             # for stream processing
hex = "0.4"      
