[package]
name = "bede-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = "0.6"
anyhow = "1"
sha2 = "0.10"
walkdir = "2"
toml = "0.8"
indicatif = "0.17"
futures = "0.3"
hex = "0.4"
dirs = "5"


[package.metadata.deb]
maintainer = "PsymoNiko callmeali@duck.com"
section = "utils"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/bede-engine", "usr/bin/", "755"],
    ["../bede.sh", "usr/bin/bede", "755"],
]
